Workaround for undeclared identifier V4L2_PIX_FMT_INVZ.

Realsense SR300 driver installation patches the kernel currently.
Until the format is officially introduced to kernel, enable using it and
resolve build error on kernel > 4.6.

BUG=661877

Review-Url: https://codereview.chromium.org/2475633002
Cr-Commit-Position: refs/heads/master@{#429810}

Former-commit-id: 957ba284b09867e3d6c7054a5e2fcc29c37d3722